<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameScreen">

    <ImageView
        android:id="@+id/iv_game_play_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sasirangan" />

    <ImageView
        android:id="@+id/iv_game_play_status_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/status_bar"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/status_bar" />

    <ImageView
        android:id="@+id/iv_game_play_back"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_back"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/iv_game_play_setting"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_settings"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setting_button" />

    <TextView
        android:id="@+id/tv_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/malgun"
        android:text="@string/game_status_bar"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:letterSpacing="0.2"
        app:layout_constraintBottom_toBottomOf="@+id/iv_game_play_status_bar"
        app:layout_constraintEnd_toStartOf="@+id/iv_game_play_setting"
        app:layout_constraintStart_toEndOf="@+id/iv_game_play_back"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>