<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".tradisibudaya.TradisiScreen">

    <ImageView
        android:id="@+id/iv_tradisi_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_sasirangan_double" />

    <ImageView
        android:id="@+id/iv_tradisi_bar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/status_tradisi"
        android:contentDescription="@string/status_bar" />

    <ImageView
        android:id="@+id/iv_tradisi_back"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"
        android:contentDescription="@string/button_back" />

    <ImageView
        android:id="@+id/iv_tradisi_setting"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setting_button"
        android:contentDescription="@string/button_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>