<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingScreen">

    <ImageView
        android:id="@+id/iv_setting_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_sasirangan_double" />

    <ImageView
        android:id="@+id/iv_setting_frame"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/setting_frame"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_setting_bg"
        app:srcCompat="@drawable/settings_bg" />

    <ImageView
        android:id="@+id/iv_setting_volume"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/setting_volume_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/iv_setting_exit"
        app:layout_constraintEnd_toEndOf="@+id/iv_setting_frame"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_setting_frame"
        app:layout_constraintTop_toBottomOf="@+id/iv_setting_mainmenu"
        app:srcCompat="@drawable/settings_volume_button" />

    <ImageView
        android:id="@+id/iv_setting_exit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/setting_exit_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/iv_setting_frame"
        app:layout_constraintEnd_toEndOf="@+id/iv_setting_frame"
        app:layout_constraintStart_toStartOf="@+id/iv_setting_frame"
        app:srcCompat="@drawable/settings_exit_button" />

    <ImageView
        android:id="@+id/iv_setting_mainmenu"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/setting_main_menu_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/iv_setting_frame"
        app:layout_constraintStart_toStartOf="@+id/iv_setting_frame"
        app:layout_constraintTop_toTopOf="@+id/iv_setting_frame"
        app:srcCompat="@drawable/settings_mainmenu_button" />

    <ImageView
        android:id="@+id/iv_setting_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_close"
        app:layout_constraintEnd_toEndOf="@+id/iv_setting_frame"
        app:layout_constraintTop_toTopOf="@+id/iv_setting_frame" />

    <include
        android:id="@+id/layout_volume"
        layout="@layout/layout_volume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>