<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sasirangan_double"
    tools:context=".ui.komoditas.KomoditasScreen">

    <ImageView
        android:id="@+id/iv_komoditas_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/status_bar"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/status_bar" />

    <TextView
        android:id="@+id/tv_komoditas"
        style="@style/StatusBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/komoditas"
        app:layout_constraintBottom_toBottomOf="@+id/iv_komoditas_bar"
        app:layout_constraintEnd_toStartOf="@+id/iv_komoditas_setting"
        app:layout_constraintStart_toEndOf="@+id/iv_komoditas_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_komoditas_back"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_back"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/iv_komoditas_setting"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/button_settings"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setting_button" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_komoditas_bar"
        app:layout_constraintVertical_bias="0.0">

    </androidx.viewpager2.widget.ViewPager2>

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/next_button"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:srcCompat="@drawable/circle_nav" />

    <ImageView
        android:id="@+id/btn_prev"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/next_button"
        android:rotation="180"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:srcCompat="@drawable/circle_nav" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
