<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".tradisibudaya.KesenianScreen">

    <ImageView
        android:id="@+id/iv_kesenian_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_sasirangan_double" />

    <ImageView
        android:id="@+id/iv_kesenian_bar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:contentDescription="@string/bg"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/status_kesenian" />

    <ImageView
        android:id="@+id/iv_kesenian_back"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:contentDescription="@string/button_back"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <ImageView
        android:id="@+id/iv_setting_kesenian"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:contentDescription="@string/button_settings"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setting_button" />

</androidx.constraintlayout.widget.ConstraintLayout>